use go:embed instead go-bindata, use go mod

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 *.swp
 bin/
-pkg/
 src/code.google.com
 src/github.com
 src/bitbucket.org
 src/launchpad.net
 src/gopkg.in
-src/ngrok/client/assets/
-src/ngrok/server/assets/
+src/pkg/client/assets/
+src/pkg/server/assets/
